--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,13 @@ python =
 [testenv]
 changedir = tests
 extras = testing
-setenv = PYTHONUNBUFFERED=yes
+setenv =
+    PYTHONUNBUFFERED=yes
+    COVERAGE_FILE={envtmpdir}/.coverage
+whitelist_externals =
+    mv
+    mkdir
+
 description = Run tests and measure coverage
 deps =
     pytest
@@ -35,7 +41,10 @@ deps =
     mock
     pyyaml
     jinja2
-commands = pytest --basetemp="{envtmpdir}" {posargs}
+commands =
+    pytest --basetemp="{envtmpdir}" {posargs}
+    mkdir -p {toxinidir}/.coverage-reports
+    mv {envtmpdir}/.coverage {toxinidir}/.coverage-reports/.coverage.{env:COVERAGE_PREFIX:}{envname}
 
 [testenv:flake8]
 changedir = src/
@@ -86,7 +95,11 @@ commands = jupyter-book build ./docs
 [testenv:coverage-report]
 description = Report coverage over all test runs.
 changedir = .
-basepython = python3.8
 deps = coverage
+setenv =
+    COVERAGE_FILE = {toxinidir}/.coverage-reports/.coverage
 skip_install = true
-commands = coverage report
+commands =
+    coverage combine {toxinidir}/.coverage-reports/
+    coverage html --directory={toxinidir}/.coverage-reports/
+    coverage report --show-missing
