--- a/.github/workflows/master.push.workflow.yaml
+++ b/.github/workflows/master.push.workflow.yaml
@@ -35,10 +35,10 @@ jobs:
       - name: "Run tox targets for ${{ matrix.python-version }}"
         run: tox
       - name: "Get coverage"
+        if: "contains(env.USING_COVERAGE, matrix.python-version)"
         run: |
           set -xe
-          coverage xml
-        if: "contains(env.USING_COVERAGE, matrix.python-version)"
+          tox -e coverage-report
       - name: "Upload coverage to Codecov"
         if: "contains(env.USING_COVERAGE, matrix.python-version)"
         uses: "codecov/codecov-action@v1"
