Adding new broker logging config support
When using default_with_user_address_settings.yaml.jinja2 profile
one can generate customized logging configurations so that
it only generate what the tune file specified, no more no less.
It can facilitate tools that use it to merge new logging config
into broker existing logging.configuration files.

--- a/tests/extras/tune_files/special_address_setting.yaml
+++ b/tests/extras/tune_files/special_address_setting.yaml
@@ -18,5 +18,5 @@ log_level_utils: INFO
 user_address_settings:
   - address_full_policy: PAGE
     match: '#'
-    dead_letter_queue_prefix:
-    config_delete_queues: OFF
+    dead_letter_queue_prefix: uuid1
+    config_delete_queues: uuid2
