--- a/tox.ini
+++ b/tox.ini
@@ -4,12 +4,9 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = yaml, flake8, py36, py37, py38, pypy3, mypy, docs, manifest, coverage-report
-toxworkdir=/tmp/.tox.yacfg/
-
-[pytest]
-addopts = -ra -vv --cov=yacfg --cov=yacfg_batch --cov-report=xml
-testpaths = tests
+skipsdist = true
+envlist = yaml, flake8, py36, py37, py38, pypy3, mypy, docs, pytest, coverage-report
+toxworkdir = /tmp/.tox.yacfg/
 
 [flake8]
 max-line-length = 160
@@ -19,87 +16,68 @@ max-complexity = 10
 [gh-actions]
 python =
     3.6: py36
-    3.7: py37, docs
-    3.8: py38, flake8, yaml, mypy, manifest
-    3.9: py39
+    3.7: py37
+    3.8: py38
+    3.9: py39, flake8, yaml, mypy, docs
     pypy3: pypy3
 
 [testenv]
-changedir = tests
 extras = testing
 setenv =
     PYTHONUNBUFFERED=yes
     COVERAGE_FILE={envtmpdir}/.coverage
-whitelist_externals =
+allowlist_externals =
     mv
     mkdir
-
-description = Run tests and measure coverage
-deps =
-    pytest
-    pytest-cov
-    mock
-    pyyaml
-    jinja2
+    bash
+    poetry
 commands =
-    pytest --basetemp="{envtmpdir}" {posargs}
+    poetry install -v
+
+[testenv:pytest]
+changedir = tests
+description = Run tests and measure coverage
+commands =
+    poetry run pytest --basetemp="{envtmpdir}" {posargs}
     mkdir -p {toxinidir}/.coverage-reports
     mv {envtmpdir}/.coverage {toxinidir}/.coverage-reports/.coverage.{env:COVERAGE_PREFIX:}{envname}
 
 [testenv:flake8]
 changedir = src/
-deps = flake8
-commands = flake8 --exit-zero
+commands = poetry run flake8 --exit-zero
 
 [testenv:yaml]
+description = Check yaml syntax
+basepython = python3.9
 changedir = src/
-deps = yamllint
-commands = yamllint .
+commands = poetry run yamllint .
 
 [testenv:mypy]
-changedir = .
 description = Check types
-deps = mypy
-basepython = python3.8
-commands = mypy src --ignore-missing-imports
-
-[testenv:manifest]
-description = Ensure MANIFEST.in is up to date.
-changedir = .
-basepython = python3.8
-deps = check-manifest
-commands = check-manifest {posargs}
+basepython = python3.9
+commands = poetry run mypy src --ignore-missing-imports
 
 [testenv:pre-commit]
 description = Run all pre-commit hooks
-changedir = .
-basepython = python3.8
-skip_install = true
-deps = pre-commit
-commands = pre-commit {posargs:run --all-files}
+basepython = python3.9
+commands = poetry run pre-commit {posargs:run --all-files}
 
 [testenv:profile-test]
-changedir = .
-allowlist_externals = bash
 deps = bash
 commands = bash profile_test.sh
 
 [testenv:docs]
 description = Build docs
-changedir = .
-basepython = python3.7
+basepython = python3.9
 extras = docs
-deps = jupyter-book
-commands = jupyter-book build ./docs
+commands = poetry run jupyter-book build ./docs
 
 [testenv:coverage-report]
-description = Report coverage over all test runs.
-changedir = .
-deps = coverage
+description = Report coverage over all test runs
+basepython = python3.9
 setenv =
     COVERAGE_FILE = {toxinidir}/.coverage-reports/.coverage
-skip_install = true
 commands =
-    coverage combine {toxinidir}/.coverage-reports/
-    coverage html --directory={toxinidir}/.coverage-reports/
-    coverage report --show-missing
+    poetry run coverage combine {toxinidir}/.coverage-reports/
+    poetry run coverage html --directory={toxinidir}/.coverage-reports/
+    poetry run coverage report --show-missing
