--- a/.github/workflows/master.push.workflow.yaml
+++ b/.github/workflows/master.push.workflow.yaml
@@ -18,13 +18,14 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.6", "3.7", "3.8", "3.9", "pypy3"]
+        python-version: ["3.8", "3.9", "pypy3"]
 
     steps:
       - uses: "actions/checkout@v2"
       - uses: "actions/setup-python@v2"
         with:
           python-version: "${{ matrix.python-version }}"
+      - uses: "abatilo/actions-poetry@v2.0.0"
       - name: "Install dependencies"
         run: |
           set -xe
