--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@
 
 [tox]
 skipsdist = true
-envlist = yaml, flake8, py36, py37, py38, pypy3, mypy, docs, pytest, coverage-report
+envlist = yaml, flake8, mypy, py{38,39,py3}-pytest, coverage-report, docs
 toxworkdir = /tmp/.tox.yacfg/
 
 [flake8]
@@ -15,11 +15,19 @@ max-complexity = 10
 
 [gh-actions]
 python =
-    3.6: py36
-    3.7: py37
-    3.8: py38
-    3.9: py39, flake8, yaml, mypy, docs
-    pypy3: pypy3
+    pypy3: pytest
+    3.8: py38-pytest
+    3.9: py39-pytest, flake8, yaml, mypy, docs
+
+[testenv:base]
+basepython = python3.9
+
+[testenv:pytest]
+description = Run tests and measure coverage
+commands =
+    poetry run pytest --basetemp="{envtmpdir}" {posargs}
+    mkdir -p {toxinidir}/.coverage-reports
+    mv {envtmpdir}/.coverage {toxinidir}/.coverage-reports/.coverage.{env:COVERAGE_PREFIX:}{envname}
 
 [testenv]
 extras = testing
@@ -32,49 +40,43 @@ allowlist_externals =
     bash
     poetry
 commands =
-    poetry install -v
-
-[testenv:pytest]
-changedir = tests
-description = Run tests and measure coverage
-commands =
-    poetry run pytest --basetemp="{envtmpdir}" {posargs}
-    mkdir -p {toxinidir}/.coverage-reports
-    mv {envtmpdir}/.coverage {toxinidir}/.coverage-reports/.coverage.{env:COVERAGE_PREFIX:}{envname}
+    poetry install -vtox
+    pytest: {[testenv:pytest]commands}
 
 [testenv:flake8]
 changedir = src/
+basepython = {[testenv:base]basepython}
 commands = poetry run flake8 --exit-zero
 
 [testenv:yaml]
 description = Check yaml syntax
-basepython = python3.9
+basepython = {[testenv:base]basepython}
 changedir = src/
 commands = poetry run yamllint .
 
 [testenv:mypy]
 description = Check types
-basepython = python3.9
+basepython = {[testenv:base]basepython}
 commands = poetry run mypy src --ignore-missing-imports
 
 [testenv:pre-commit]
 description = Run all pre-commit hooks
-basepython = python3.9
+basepython = {[testenv:base]basepython}
 commands = poetry run pre-commit {posargs:run --all-files}
 
 [testenv:profile-test]
-deps = bash
-commands = bash profile_test.sh
+basepython = {[testenv:base]basepython}
+commands = poetry run bash profile_test.sh
 
 [testenv:docs]
 description = Build docs
-basepython = python3.9
+basepython = {[testenv:base]basepython}
 extras = docs
 commands = poetry run jupyter-book build ./docs
 
 [testenv:coverage-report]
 description = Report coverage over all test runs
-basepython = python3.9
+basepython = {[testenv:base]basepython}
 setenv =
     COVERAGE_FILE = {toxinidir}/.coverage-reports/.coverage
 commands =
