fix: Github Actions
 - del "set -xe" (Windows)
 - gh action pypy 3.7

--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ max-complexity = 10
 
 [gh-actions]
 python =
-    pypy3: pytest
+    pypy-3.7: pypy37-pytest
     3.8: py38-pytest
     3.9: py39-pytest, flake8, yaml, mypy, docs
 
