--- a/.github/workflows/main.push.workflow.yaml
+++ b/.github/workflows/main.push.workflow.yaml
@@ -39,19 +39,19 @@ jobs:
           python -m pip install --upgrade pip setuptools wheel
           python -m pip install --upgrade coverage[toml] virtualenv tox tox-gh-actions
 
-      - name: "Configure poetry"
-        run: poetry config virtualenvs.in-project true
-
-      - name: "Set up cache"
-        uses: actions/cache@v2
-        id: cache
-        with:
-          path: .venv
-          key: venv-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}
-
-      - name: "Ensure cache is healthy"
-        if: steps.cache.outputs.cache-hit == 'true'
-        run: timeout 10s poetry run pip --version || rm -rf .venv
+#      - name: "Configure poetry"
+#        run: poetry config virtualenvs.in-project true
+#
+#      - name: "Set up cache"
+#        uses: actions/cache@v2
+#        id: cache
+#        with:
+#          path: .venv
+#          key: venv-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}
+#
+#      - name: "Ensure cache is healthy"
+#        if: steps.cache.outputs.cache-hit == 'true'
+#        run: timeout 10s poetry run pip --version || rm -rf .venv
 
       - name: "Run tox targets for ${{ matrix.python-version }}"
         run: tox
@@ -109,20 +109,20 @@ jobs:
 
       - name: "Install poetry"
         uses: "abatilo/actions-poetry@v2.1.2"
-
-      - name: "Configure poetry"
-        run: poetry config virtualenvs.in-project true
-
-      - name: "Set up cache"
-        uses: actions/cache@v2
-        id: cache
-        with:
-          path: .venv
-          key: venv-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}
-
-      - name: "Ensure cache is healthy"
-        if: steps.cache.outputs.cache-hit == 'true'
-        run: timeout 10s poetry run pip --version || rm -rf .venv
+#
+#      - name: "Configure poetry"
+#        run: poetry config virtualenvs.in-project true
+#
+#      - name: "Set up cache"
+#        uses: actions/cache@v2
+#        id: cache
+#        with:
+#          path: .venv
+#          key: venv-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}
+#
+#      - name: "Ensure cache is healthy"
+#        if: steps.cache.outputs.cache-hit == 'true'
+#        run: timeout 10s poetry run pip --version || rm -rf .venv
 
       - name: "Build package"
         if: "contains(env.USING_DIST, matrix.python-version)"
