--- a/.github/workflows/main.pull_request.workflow.yaml
+++ b/.github/workflows/main.pull_request.workflow.yaml
@@ -86,6 +86,7 @@ jobs:
 
       - name: "Upload docs artifacts"
         uses: actions/upload-artifact@v2
+        if: "contains(env.USING_DOCS, matrix.python-version)"
         with:
-          name: docs_html-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}
+          name: docs
           path: docs/_build/html
