--- a/.github/workflows/main.push.workflow.yaml
+++ b/.github/workflows/main.push.workflow.yaml
@@ -69,9 +69,10 @@ jobs:
 #          fail_ci_if_error: true
 
       - name: "Upload docs artifacts"
+        if: "contains(env.USING_DOCS, matrix.python-version)"
         uses: actions/upload-artifact@v2
         with:
-          name: docs_html-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}
+          name: docs
           path: docs/_build/html
 #
 #      - name: "Upload coverage artifacts"
@@ -125,7 +126,6 @@ jobs:
 #        run: timeout 10s poetry run pip --version || rm -rf .venv
 
       - name: "Build package"
-        if: "contains(env.USING_DIST, matrix.python-version)"
         id: build
         run: |
           poetry build
@@ -148,7 +148,7 @@ jobs:
 
       - uses: actions/download-artifact@master
         with:
-          name: docs_html-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}
+          name: docs
           path: pages
 #
 #      - uses: actions/download-artifact@master
