--- a/.github/workflows/main.pull_request.workflow.yaml
+++ b/.github/workflows/main.pull_request.workflow.yaml
@@ -7,7 +7,8 @@ on:
       - main
 
 jobs:
-  tests:
+  Tests:
+    name: "Tests | ${{ runner.os }} | Python ${{ matrix.python-version }}"
     env:
       USING_COVERAGE: '3.9'
       USING_DOCS: '3.9'
