fix: tox paths and commands

--- a/tox.ini
+++ b/tox.ini
@@ -40,18 +40,16 @@ allowlist_externals =
     bash
     poetry
 commands =
-    poetry install -vtox
+    poetry install -v
     pytest: {[testenv:pytest]commands}
 
 [testenv:flake8]
-changedir = src/
 basepython = {[testenv:base]basepython}
 commands = poetry run flake8 --exit-zero
 
 [testenv:yaml]
 description = Check yaml syntax
 basepython = {[testenv:base]basepython}
-changedir = src/
 commands = poetry run yamllint .
 
 [testenv:mypy]
