--- a/.github/workflows/main.push.workflow.yaml
+++ b/.github/workflows/main.push.workflow.yaml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   Tests:
-    name: "Tests | ${{ runner.os }} | Python ${{ matrix.python-version }}"
+    name: "Tests | ${{ matrix.os }} | Python ${{ matrix.python-version }}"
 
     env:
       USING_COVERAGE: '3.9'
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["Ubuntu", "Windows", "macos"]
+        os: ["Ubuntu", "Windows", "Macos"]
         python-version: ["3.8", "3.9", "pypy-3.7"]
     runs-on: "${{ matrix.os }}-latest"
     steps:
