--- a/.github/workflows/main.push.workflow.yaml
+++ b/.github/workflows/main.push.workflow.yaml
@@ -37,7 +37,8 @@ jobs:
           python -VV
           python -m site
           python -m pip install --upgrade pip setuptools wheel
-          python -m pip install --upgrade coverage[toml] virtualenv tox tox-gh-actions
+          python -m pip install --upgrade coverage[toml] tox tox-gh-actions
+          poetry install
 
 #      - name: "Configure poetry"
 #        run: poetry config virtualenvs.in-project true
