--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4,5 +4,5 @@
 
 # templates
 
-/src/yacfg/profiles @howardgao @jiridanek
-/src/yacfg/templates @howardgao @jiridanek
+/src/yacfg/profiles/ @howardgao @jiridanek
+/src/yacfg/templates/ @howardgao @jiridanek
