fix: release pypi.org specification for description

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,10 +15,7 @@
 [tool.poetry]
 name = "yacfg"
 version = "0.9.0"
-description = """
-Template based configuration files generator based on jinja2
-and yaml mainly focused on Apache ActiveMQ Artemis and related projects
-"""
+description = "Template based configuration files generator based on jinja2 and yaml."
 authors = ["Zdenek Kraus <zkraus@redhat.com>", "Dominik Lenoch <dlenoch@redhat.com>"]
 maintainers = ["Dominik Lenoch <dlenoch@redhat.com>"]
 license = "Apache-2.0"
