--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,7 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.8"
 jinja2 = "2.11.3" # TODO: Fix issues with 3.x.x (https://github.com/rh-messaging-qe/yacfg/issues/41)
-pyaml = "20.4.0"
+PyYAML = "5.4.1"
 colorlog = { version = "^5.0.1", optional = true }
 colorama = { version = "^0.4.4", optional = true }
 
