--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@
 
 [tox]
 skipsdist = true
-envlist = yaml, flake8, mypy, py{38,39,py3}-pytest, coverage-report, docs
+envlist = py{38,39}-pytest, py39-{yaml,flake8,mypy,coverage-report,docs}
 toxworkdir = /tmp/.tox.yacfg/
 
 [flake8]
@@ -15,9 +15,8 @@ max-complexity = 10
 
 [gh-actions]
 python =
-    pypy-3.7: pypy3-pytest
     3.8: py38-pytest
-    3.9: py39-pytest, flake8, yaml, mypy, docs
+    3.9: py39-pytest, py39-flake8, py39-yaml, py39-mypy, py39-docs
 
 [testenv:base]
 basepython = python3.9
@@ -42,6 +41,12 @@ allowlist_externals =
 commands =
     poetry install -v
     pytest: {[testenv:pytest]commands}
+    flake8: {[testenv:flake8]commands}
+    yaml: {[testenv:yaml]commands}
+    mypy: {[testenv:mypy]commands}
+    docs: {[testenv:docs]commands}
+    coverage-report: {[testenv:coverage-report]commands}
+    profile-test: {[testenv:profile-test]commands}
 
 [testenv:flake8]
 basepython = {[testenv:base]basepython}
