--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,20 +57,21 @@ jinja2 = "2.11.3" # TODO: Fix issues with 3.x.x (https://github.com/rh-messaging
 PyYAML = "5.4.1"
 colorlog = { version = "^5.0.1", optional = true }
 colorama = { version = "^0.4.4", optional = true }
+importlib-metadata = { version = "^4.6.3", python = "<3.8" }
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
 pytest-cov = "^2.12.1"
 flake8 = "^3.9.2"
-mypy = "^0.901"
+mypy = "^0.910"
 mock = "^4.0.3"
-tox = "^3.23.1"
+tox = "^3.24.1"
 coverage = "^5.5"
 yamllint = "^1.26.1"
 pre-commit = "^2.13.0"
 jupyter-book = "^0.11.1"
-types-Jinja2 = "^0.1.3"
-types-PyYAML = "^0.1.6"
+types-Jinja2 = "^2.11.2"
+types-PyYAML = "^5.4.3"
 
 [tool.poetry.extras]
 color_log = ["colorama", "colorlog"]
