--- a/.github/workflows/main.push.workflow.yaml
+++ b/.github/workflows/main.push.workflow.yaml
@@ -19,7 +19,7 @@ jobs:
       fail-fast: false
       matrix:
         os: ["Ubuntu", "Windows", "Macos"]
-        python-version: ["3.8", "3.9", "pypy-3.7"]
+        python-version: ["3.8", "3.9"]
     runs-on: "${{ matrix.os }}-latest"
     steps:
 
