--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@
 
 [tool.poetry]
 name = "yacfg"
-version = "0.9.2"
+version = "0.9.3"
 description = "Template based configuration files generator based on jinja2 and yaml."
 authors = ["Zdenek Kraus <zkraus@redhat.com>", "Dominik Lenoch <dlenoch@redhat.com>"]
 maintainers = ["Dominik Lenoch <dlenoch@redhat.com>"]
@@ -53,7 +53,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.8"
-jinja2 = "2.11.3" # TODO: Fix issues with 3.x.x (https://github.com/rh-messaging-qe/yacfg/issues/41)
+jinja2 = ">= 1.10.3, <= 2.11.3" # TODO: Fix issues with 3.x.x (https://github.com/rh-messaging-qe/yacfg/issues/41)
 PyYAML = "5.4.1"
 colorlog = { version = "^5.0.1", optional = true }
 colorama = { version = "^0.4.4", optional = true }
