--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,7 @@ pre-commit = "^2.15.0"
 jupyter-book = "^0.12.0"
 types-Jinja2 = "^2.11.8"
 types-PyYAML = "^6.0.0"
+black = "^21.10b0"
 
 [tool.poetry.extras]
 color_log = ["colorama", "colorlog"]
