UPD: tox pytest coverage + Black formatter

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@
 
 [tox]
 skipsdist = true
-envlist = py{38,39}-pytest, py39-{yaml,flake8,mypy,coverage-report,docs}
+envlist = py{38,39}-pytest, py39-{yaml,flake8,black,mypy,coverage-report,docs}
 toxworkdir = /tmp/.tox.yacfg/
 
 [flake8]
@@ -15,6 +15,7 @@ max-complexity = 10
 
 [gh-actions]
 python =
+    3.7: py38-pytest
     3.8: py38-pytest
     3.9: py39-pytest, py39-flake8, py39-yaml, py39-mypy, py39-docs
 
@@ -24,7 +25,7 @@ basepython = python3.9
 [testenv:pytest]
 description = Run tests and measure coverage
 commands =
-    poetry run pytest --basetemp="{envtmpdir}" {posargs}
+    poetry run pytest -ra -vv --cov=yacfg --cov=yacfg_batch --cov-report=xml --basetemp="{envtmpdir}" {posargs}
     mkdir -p {toxinidir}/.coverage-reports
     mv {envtmpdir}/.coverage {toxinidir}/.coverage-reports/.coverage.{env:COVERAGE_PREFIX:}{envname}
 
@@ -76,6 +77,11 @@ description = Build docs
 basepython = {[testenv:base]basepython}
 extras = docs
 commands = poetry run jupyter-book build ./docs
+
+[testenv:black]
+description = Black formatter
+basepython = {[testenv:base]basepython}
+commands = poetry run black --check ./
 
 [testenv:coverage-report]
 description = Report coverage over all test runs
