--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,12 +52,12 @@ packages = [
 "Bug Tracker" = "https://github.com/rh-messaging-qe/yacfg/issues"
 
 [tool.poetry.dependencies]
-python = "^3.8"
-jinja2 = ">=1.10.3,<3.0.3" # TODO: Fix issues with 3.x.x (https://github.com/rh-messaging-qe/yacfg/issues/41)
+python = "^3.7"
+jinja2 = "^3.0.2"
 PyYAML = "6.0"
 colorlog = { version = ">=5.0.1,<7.0.0", optional = true }
 colorama = { version = "^0.4.4", optional = true }
-importlib-metadata = { version = "^4.6.3", python = "<3.8" }
+importlib-metadata = { version = "<4.8.1", python = "<3.8" }
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
