--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ PyYAML = "6.0"
 colorlog = { version = ">=5.0.1,<7.0.0", optional = true }
 colorama = { version = "^0.4.4", optional = true }
 importlib-metadata = { version = "<4.8.1", python = "<3.8" }
+jinja2-ansible-filters = "^1.3.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
