UPD Dependabot image + poetry daily

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,6 +8,13 @@ updates:
       interval: "daily"
 
   - package-ecosystem: "pip"
+    labels: "python-dep"
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "daily"
+
+  - package-ecosystem: "docker"
+    labels: "image"
+    directory: "/"
+    schedule:
+      interval: "daily"
