--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -43,7 +43,7 @@ jobs:
         tags: ${{ steps.build-image.outputs.tags }}
         registry: ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAMESPACE }}
         username: ${{ secrets.QUAY_USER }}
-        password: ${{ secrets.REGISTRY_PASSWORD }}
+        password: ${{ secrets.QUAY_TOKEN }}
 
     - name: Print image URL
       run: echo "Image pushed to ${{ steps.push-to-quay.outputs.registry-paths }}"
