--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -13,11 +13,7 @@ env:
 jobs:
   build:
     name: Build and push image
-    runs-on: ubuntu-20.04
-    strategy:
-      fail-fast: false
-      matrix:
-        install_latest: [ true, false ]
+    runs-on: ubuntu-22.04
 
     steps:
     - uses: actions/checkout@v3
@@ -31,7 +27,7 @@ jobs:
       with:
         image: ${{ env.IMAGE_NAME }}
         tags: latest ${{ github.sha }} ${{ github.ref_name }}
-        archs: amd64, arm64 #ppc64le, s390x, 
+        archs: amd64, arm64, ppc64le, s390x
         containerfiles: |
           ./Dockerfile
 
