--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,8 +53,8 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.7"
-jinja2 = "^3.0.2"
-PyYAML = "6.0"
+jinja2 = "^3.1.2"
+PyYAML = "^6.0"
 colorlog = { version = ">=5.0.1,<7.0.0", optional = true }
 colorama = { version = "^0.4.4", optional = true }
 importlib-metadata = { version = "<4.8.1", python = "<3.8" }
