update(yacfg): Perform maintenance, optimize code, and fix bugs
- Updated Python minimum required version to 3.8 in the `README.md` file
- Corrected the name of the maintainer in the `README.md` file
- Updated the license year to 2023 in the `README.md` file
- Optimized imports and removed unused imports in `config_data.py`
- Improved logger settings and added debug log messages in `logger_settings.py`
- Enhanced query functionality and added debug log messages in `query.py`
- Updated the paths for profiles and templates in the tests

This commit aims to improve the codebase, enhance performance, and ensure accurate information in the package documentation and tests.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,9 +1,9 @@
 ---
 # Book settings
-title: YamlConfiger
+title: YAMLCFG
 author: rh-messaging-qe
 repository:
-  url: https://github.com/rh-messaging-qe/YamlConfiger
+  url: https://github.com/rh-messaging-qe/yacfg
   path_to_book: docs
 html:
   use_repository_button: true
