--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,10 @@
 
 [tool.poetry]
 name = "yacfg"
-version = "0.9.3"
+version = "0.10.0"
 description = "Template based configuration files generator based on jinja2 and yaml."
-authors = ["Zdenek Kraus <zkraus@redhat.com>", "Dominik Lenoch <dlenoch@redhat.com>"]
-maintainers = ["Dominik Lenoch <dlenoch@redhat.com>"]
+authors = ["Zdenek Kraus <zkraus@redhat.com>", "Dominik Lenosi <dlenoch@redhat.com>"]
+maintainers = ["Dominik Lenosi <dlenoch@redhat.com>"]
 license = "Apache-2.0"
 readme = "README.md"
 homepage = "https://github.com/rh-messaging-qe/yacfg"
@@ -59,6 +59,7 @@ colorlog = { version = ">=5.0.1,<7.0.0", optional = true }
 colorama = { version = "^0.4.4", optional = true }
 importlib-metadata = { version = "<4.8.1", python = "<3.8" }
 jinja2-ansible-filters = "^1.3.2"
+ruamel-yaml = "^0.17.32"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.3.1"
