--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,7 @@ packages = [
 "Bug Tracker" = "https://github.com/rh-messaging-qe/yacfg/issues"
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.8.1"
 jinja2 = "^3.1.2"
 PyYAML = "^6.0"
 colorlog = { version = ">=5.0.1,<7.0.0", optional = true }
@@ -64,13 +64,13 @@ ruamel-yaml = "^0.17.32"
 [tool.poetry.dev-dependencies]
 pytest = "^7.3.1"
 pytest-cov = "^4.0.0"
-flake8 = "^5.0.4"
+flake8 = "^6.0.0"
 mypy = "^1.3"
 mock = "^5.0.1"
-tox = "^3.28.0"
+tox = "^4.6.3"
 coverage = "^7.2"
 yamllint = "^1.32.0"
-pre-commit = "^2.19.0"
+pre-commit = "^3.3.0"
 jupyter-book = "^0.15.1"
 types-Jinja2 = "^2.11.9"
 types-PyYAML = "^6.0.12"
@@ -80,7 +80,7 @@ black = "^23.1"
 color_log = ["colorama", "colorlog"]
 
 [tool.poetry.scripts]
-yacfg = 'yacfg.yacfg_cli:main'
+yacfg = 'yacfg.cli.yacfg_cli:main'
 yacfg-batch = 'yacfg_batch.yacfg_batch_cli:main'
 
 [tool.pytest.ini_options]
