Fix .github/dependabot.yml syntax errors
Fixes #239

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,13 +8,13 @@ updates:
       interval: "daily"
 
   - package-ecosystem: "pip"
-    labels: "python-dep"
+    labels: ["python-dep"]
     directory: "/"
     schedule:
       interval: "daily"
 
   - package-ecosystem: "docker"
-    labels: "image"
+    labels: ["image"]
     directory: "/"
     schedule:
       interval: "daily"
