Add ID to Python setup step in workflows
This commit adds an ID ("full-python-version") to the "Set up Python" step in both the pull request and push workflows. This ID will aid in easily referencing this specific step in further actions.

--- a/.github/workflows/main.pull_request.workflow.yaml
+++ b/.github/workflows/main.pull_request.workflow.yaml
@@ -27,6 +27,7 @@ jobs:
 
       - name: "Set up Python ${{ matrix.python-version }}"
         uses: "actions/setup-python@v5.1.0"
+        id: full-python-version
         with:
           python-version: "${{ matrix.python-version }}"
 
@@ -83,7 +84,7 @@ jobs:
       - name: "Upload dist artifacts"
         uses: actions/upload-artifact@v3
         with:
-          name: package-dist-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}
+          name: package-dist-${{ runner.os }}-${{ steps.full-python-version.outputs.python-version }}
           path: dist/
 
       - name: "Upload docs artifacts"
