--- a/.github/workflows/main.push.workflow.yaml
+++ b/.github/workflows/main.push.workflow.yaml
@@ -9,7 +9,6 @@ on:
 jobs:
   Tests:
     name: "Tests | ${{ matrix.os }} | Python ${{ matrix.python-version }}"
-
     env:
       USING_COVERAGE: '3.11'
       USING_DOCS: '3.11'
@@ -19,10 +18,10 @@ jobs:
       fail-fast: false
       matrix:
         os: ["Ubuntu", "Windows"]
-        python-version: ["3.11", "3.10"]
+        python-version: ["3.11", "pypy-3.10", "pypy-3.9"]
     runs-on: "${{ matrix.os }}-latest"
-    steps:
 
+    steps:
       - uses: "actions/checkout@v4"
 
       - name: "Set up Python ${{ matrix.python-version }}"
@@ -37,37 +36,12 @@ jobs:
         run: |
           python -VV
           python -m site
-          python -m pip install --upgrade pip setuptools wheel coverage[toml] tox tox-gh-actions
+          python -m pip install --upgrade pip setuptools wheel
+          python -m pip install --upgrade coverage[toml] tox tox-gh-actions
           poetry install
-
-#      - name: "Configure poetry"
-#        run: poetry config virtualenvs.in-project true
-#
-#      - name: "Set up cache"
-#        uses: actions/cache@v2
-#        id: cache
-#        with:
-#          path: .venv
-#          key: venv-${{ runner.os }}-${{ steps.full-python-version.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
-#
-#      - name: "Ensure cache is healthy"
-#        if: steps.cache.outputs.cache-hit == 'true'
-#        run: timeout 10s poetry run pip --version || rm -rf .venv
 
       - name: "Run tox targets for ${{ matrix.python-version }}"
         run: tox
-
-#      - name: "Get coverage"
-#        if: "contains(env.USING_COVERAGE, matrix.python-version)"
-#        run: |
-#          set -xe
-#          tox -e coverage-report
-
-#      - name: "Upload coverage to Codecov"
-#        if: "contains(env.USING_COVERAGE, matrix.python-version)"
-#        uses: "codecov/codecov-action@v1"
-#        with:
-#          fail_ci_if_error: true
 
       - name: "Upload docs artifacts"
         if: "contains(env.USING_DOCS, matrix.python-version)"
@@ -75,22 +49,23 @@ jobs:
         with:
           name: docs
           path: docs/_build/html
-#
-#      - name: "Upload coverage artifacts"
-#        if: "contains(env.USING_DOCS, matrix.python-version)"
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: coverage
-#          path: .coverage-reports
-#
-#      - name: "Publish package to TestPyPI"
-#        if: "contains(env.TESTPYPI_PUBLISH, matrix.python-version)"
-#        uses: pypa/gh-action-pypi-publish@v1.3.1
-#        with:
-#          skip_existing: true
-#          user: __token__
-#          password: ${{ secrets.TESTPYPI_TOKEN }}
-#          repository_url: https://test.pypi.org/legacy/
+
+      - name: "Build package"
+        run: |
+          poetry build
+
+      - name: "Upload dist artifacts"
+        uses: actions/upload-artifact@v4
+        with:
+          name: package-dist-${{ runner.os }}-${{ steps.full-python-version.outputs.python-version }}
+          path: dist/
+
+      - name: "Run help"
+        run: "poetry run yacfg --help"
+
+      - name: "Run the test script"
+        run: ./profile_test.sh
+
 
   Build:
     needs: Tests
@@ -112,20 +87,6 @@ jobs:
 
       - name: "Install poetry"
         uses: "abatilo/actions-poetry@v3.0.0"
-#
-#      - name: "Configure poetry"
-#        run: poetry config virtualenvs.in-project true
-#
-#      - name: "Set up cache"
-#        uses: actions/cache@v2
-#        id: cache
-#        with:
-#          path: .venv
-#          key: venv-${{ runner.os }}-${{ steps.full-python-version.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
-#
-#      - name: "Ensure cache is healthy"
-#        if: steps.cache.outputs.cache-hit == 'true'
-#        run: timeout 10s poetry run pip --version || rm -rf .venv
 
       - name: "Build package"
         id: build
@@ -152,11 +113,6 @@ jobs:
         with:
           name: docs
           path: pages
-#
-#      - uses: actions/download-artifact@master
-#        with:
-#          name: coverage
-#          path: pages/coverage
 
       # Push the docs' HTML to github-pages
       - name: "GitHub Pages action"
